# sd-its-benchmark-backend

./: .env.example  .gitignore  CONFIGURATION.md  Cargo.toml  README.md  README_RUST_MIGRATION.md  TESTING_GUIDE.md  a.txt  debug_test.sh  sample_model_map_data.sql  test_all_apis.sh  test_phase_5_3.sh
.sqlx/: query-075751ab3b87eaa04048ae6550beeec6891c33fe641511ef4affd0401817d41a.json  query-0f30d04164367dfa68df1ab883920293a4555fa3cb8fd2410800659fb408548b.json  query-27d6d300055de6a8ea75ee881f6ce87b9852c999a7e611a5d5268421773dcfb0.json  query-2dd4fc6070a3cf524ee85b2d34743d61284f8b62d22a8629b428cd73b3ad2012.json  query-4fe6b897eedfb28b02983307011a58be51f9e80a3b694cde5cb7b582c8f78ff8.json  query-6655bc151cd860862e75137457c0782740425ca8dde85567f70bd582457dff49.json  query-70027ea53944c34b30aa7f601e499d8852ed88ee757cef536ea970d02bbd5ec7.json  query-7fe787597b800e4d2475a070321858f7001377235f710966fc8dadd353655473.json  query-916bbc8b8d62cf43f24b791eb80fe96f0d649bf7422035ede4dc4d018bb286b3.json  query-bf32e885aac84da9a03443624cca6a4eb6577fb6fd240ac47f05531c61fcb351.json  query-c5a3d75576a1b9c3348deee8e45beb77e833837eab3dcdf678198c0dedcfdfb5.json  query-c89f77a05eb52292f1462bc518169006786b255db034e2ad4f03111392ab0443.json  query-d39dcd9a624c8d49114848d6078f225f5b2c4e2d6db8bd286540084949f4053b.json
config/: default.toml  development.toml  local.toml.example  production.toml  staging.toml
migrations/: 001_create_runs_table.sql  002_create_performance_result_table.sql  003_create_app_details_table.sql  004_create_system_info_table.sql  005_create_libraries_table.sql  (+6 more)
(+101 files in other folders)
