[package]
name = "sd-its-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["multipart"] }
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.13"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
http = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "limit", "timeout", "trace", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
num_cpus = "1.17.0"
tempfile = "3.10.1"
